[package]
name = "ppmviewer"
version = "0.1.0"
authors = ["Vishal <vishal@local.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
log = "0.4"
pixels = "*"
winit = "0.24"
winit_input_helper = "0.9"
args = "2.0"